--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ $(function() {
     	<div class="content_box">
         	<div class="content_title content_ct"><h2>Works</h2></div>
             <div class="content">
-            	<a href="images/MAT.PNG" target="_blank" title="Лаба 1">Лаба 1</a><br>
+            	<a href="images/1.PNG" target="_blank" title="Лаба 1">Лаба 1</a><br>
 				<a href="laba2.html">Лаба 2</a>
                     
                 </div>
