--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ $(function() {
     	<div class="content_box">
         	<div class="content_title content_ct"><h2>Works</h2></div>
             <div class="content">
-            	 <a href="https://raw.githubusercontent.com/Konyaka8/konyaka8.github.io/master/images/1.png"><b>Лаба 1</b></a>
+            	 <a href="https://raw.githubusercontent.com/Konyaka8/konyaka8.github.io/master/images/1.png"><b>Лаба 1</b></a><br>
 				<a href="laba2.html">Лаба 2</a>
                     
                 </div>
