--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ $(function() {
         	<div class="content_title content_ct"><h2>В гостях у Макаренко</h2></div>
             <div class="content">
             	<div class="image_wrapper image_fl"><img src="images/tooplate_image_01.jpg" alt="Image 01" /><span></span></div>
-            <p><em>Всем привет. Меня зовут Александр Макаренко, ученик 2-го курса КрНУ (факультет электроники и компьютерной инженерии).</em></p>
+            <p><em>Всем привет. Меня зовут Александр Макаренко, студент 2-го курса КрНУ (факультет электроники и компьютерной инженерии).</em></p>
                 <p>Учусь в группе "Информатика" (И-15-1). Поступил на данную специальность в 2015. Заканчиваю обучение в 2019.</p>
     			<div class="cleaner h30"></div>
                 <div class="col_w340 float_l">
