--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ $(function() {
             <div class="content">
             	 <a href="https://raw.githubusercontent.com/Konyaka8/konyaka8.github.io/master/images/1.png">Лаба 1</a><br>
 				<a href="laba2.html">Лаба 2</a>
+		    <a href="laba3.html">Лаба 3</a>
                     
                 </div>
                 
