--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ $(function() {
         	<div class="content_title content_ct"><h2>Works</h2></div>
             <div class="content">
             	 <a href="https://raw.githubusercontent.com/Konyaka8/konyaka8.github.io/master/images/1.png">Лаба 1</a><br>
-				<a href="laba2.html">Лаба 2</a>
+				<a href="laba2.html">Лаба 2</a><br>
 		    <a href="laba3.html">Лаба 3</a>
                     
                 </div>
