--- a/laba2.html
+++ b/laba2.html
@@ -73,7 +73,7 @@
                                                 <table border="0" cellpadding="0" cellspacing="0" align="center" style="padding:0;margin:0;" data-editable="image">
                                                     <tr>
                                                         <td bgcolor="#74c044" valign="top" align="center" style="padding:1px;margin:0;border-left-width:0px;border-left-color:#ffffff;border-left-style:none;border-right-width:20px;border-right-color:#ffffff;border-right-style:solid">
-                                                            <img src="http://математика.укр/pluginfile.php/1869/course/overviewfiles/notebook-512.jpg" alt="" width="223" height="189" border="0" style="display:block;margin:auto">
+                                                            <img src="http://математика.укр/pluginfile.php/1869/course/overviewfiles/notebook-512.jpg" alt="" width="255" height="189" border="0" style="display:block;margin:auto">
                                                         </td>
                                                     </tr>
                                                 </table>
@@ -93,10 +93,10 @@
 															
                                                             <span style="font-family:Arial,sans-serif;color:#ffffff;font-size:17px;font-weight:normal;font-style:italic;">
                     <ul class="tooplate_list">
-                        <li>Удобность</li>
-                        <li>Онлайн-лекции</li>
-						<li>Мобильность</li>
-						<li>Тестирование</li>
+                        Удобность<br>
+                        Онлайн-лекции<br>
+						Мобильность<br>
+						Тестирование<br>
                         </ul>
                                                             </span>
                                                             <span style="font-family:Arial,sans-serif;color:#c6e4c8;font-size:14px;font-weight:normal;font-style:italic;">
@@ -126,7 +126,7 @@
                                                 <table border="0" cellpadding="0" cellspacing="0" align="center" style="padding:0;margin:0;" data-editable="image">
                                                     <tr>
                                                         <td bgcolor="#74c044" valign="top" align="center" style="padding:1px;margin:0;border-left-width:0px;border-left-color:#ffffff;border-left-style:none;border-right-width:0px;border-right-color:#ffffff;border-right-style:none">
-                                                            <img src="http://математика.укр/pluginfile.php/119/course/overviewfiles/demo.gif" alt="" width="217" height="189" border="0" style="display:block;margin:auto">
+                                                            <img src="http://математика.укр/pluginfile.php/119/course/overviewfiles/demo.gif" alt="" width="297" height="189" border="0" style="display:block;margin:auto">
                                                         </td>
                                                     </tr>
                                                 </table>
