--- a/laba2.html
+++ b/laba2.html
@@ -1,7 +1,3 @@
-<<<<<<< HEAD
-<!-- 32_2 -->
-=======
->>>>>>> a27cb9c0a2b0ddde0dd499813a54a16b04670a48
 <table width="100%" align="center" bgcolor="#ffffff" border="0" cellpadding="0" cellspacing="0" data-mobile="true">
     <tr>
         <td valign="top" align="center" style="padding:0;margin:0;">
@@ -76,11 +72,7 @@
                                                 <table border="0" cellpadding="0" cellspacing="0" align="center" style="padding:0;margin:0;" data-editable="image">
                                                     <tr>
                                                         <td bgcolor="#74c044" valign="top" align="center" style="padding:1px;margin:0;border-left-width:0px;border-left-color:#ffffff;border-left-style:none;border-right-width:20px;border-right-color:#ffffff;border-right-style:solid">
-<<<<<<< HEAD
-                                                            <img src="http://математика.укр/pluginfile.php/1869/course/overviewfiles/notebook-512.jpg" alt="" width="255" height="189" border="0" style="display:block;margin:auto">
-=======
                                                             <img src="http://математика.укр/pluginfile.php/1869/course/overviewfiles/notebook-512.jpg" alt="" width="223" height="189" border="0" style="display:block;margin:auto">
->>>>>>> a27cb9c0a2b0ddde0dd499813a54a16b04670a48
                                                         </td>
                                                     </tr>
                                                 </table>
@@ -100,10 +92,10 @@
 															
                                                             <span style="font-family:Arial,sans-serif;color:#ffffff;font-size:17px;font-weight:normal;font-style:italic;">
                     <ul class="tooplate_list">
-                        Удобность<br>
-                        Онлайн-лекции<br>
-						Мобильность<br>
-						Тестирование<br>
+                        <li>Удобность</li>
+                        <li>Онлайн-лекции</li>
+						<li>Мобильность</li>
+						<li>Тестирование</li>
                         </ul>
                                                             </span>
                                                             <span style="font-family:Arial,sans-serif;color:#c6e4c8;font-size:14px;font-weight:normal;font-style:italic;">
@@ -133,11 +125,7 @@
                                                 <table border="0" cellpadding="0" cellspacing="0" align="center" style="padding:0;margin:0;" data-editable="image">
                                                     <tr>
                                                         <td bgcolor="#74c044" valign="top" align="center" style="padding:1px;margin:0;border-left-width:0px;border-left-color:#ffffff;border-left-style:none;border-right-width:0px;border-right-color:#ffffff;border-right-style:none">
-<<<<<<< HEAD
-                                                            <img src="http://математика.укр/pluginfile.php/119/course/overviewfiles/demo.gif" alt="" width="297" height="189" border="0" style="display:block;margin:auto">
-=======
                                                             <img src="http://математика.укр/pluginfile.php/119/course/overviewfiles/demo.gif" alt="" width="217" height="189" border="0" style="display:block;margin:auto">
->>>>>>> a27cb9c0a2b0ddde0dd499813a54a16b04670a48
                                                         </td>
                                                     </tr>
                                                 </table>
@@ -185,8 +173,4 @@
             </table>
         </td>
     </tr>
-<<<<<<< HEAD
 </table>
-=======
-</table>
->>>>>>> a27cb9c0a2b0ddde0dd499813a54a16b04670a48
