--- a/index.html
+++ b/index.html
@@ -75,7 +75,13 @@ $(function() {
             <div class="content">
             	 <a href="https://raw.githubusercontent.com/Konyaka8/konyaka8.github.io/master/images/1.png">Лаба 1</a><br>
 				<a href="laba2.html">Лаба 2</a><br>
-		    <a href="laba3.html">Лаба 3</a>
+		    <a href="laba3.html">Лаба 3</a><br>
+			 <details>
+   <summary><a>Лаба 4</a></summary>
+   <p><a href="laba4/xml/laba4.xml">XML</a><br></p>
+   <p><a href="laba4/xml/Primer.xml">Пример XML</a><br></p>
+   <p><a href="laba4/pars/index.html">XML Parser</a><br></p>
+  </details>
                     
                 </div>
                 
