--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ $(function() {
 		    <a href="laba3.html">Лаба 3</a><br>
 			 <details>
    <summary><a>Лаба 4</a></summary>
-   <p><a href="laba4/xml/laba4.xml">XML</a><br></p>
+   <p><a href="laba4/xml/Laba4.xml">XML</a><br></p>
    <p><a href="laba4/xml/Primer.xml">Пример XML</a><br></p>
    <p><a href="laba4/pars/index.html">XML Parser</a><br></p>
   </details>
