--- a/laba4/pars/index.html
+++ b/laba4/pars/index.html
@@ -1,46 +1,45 @@
-<!DOCTYPE html> 
-<html> 
-	<head> 
-	<title>Лаба 4</title> 
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.css" />
-	<link rel="stylesheet" href="table.css" />
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.js"></script>
-	<script src="xml2json.js"></script>
-	<script src="jquery.xdomainajax.js"></script>
-	<script>
-		function xmlLoader(){
-			$.ajax({
-			    url: 'http://bank-ua.com/export/metalrate.xml',
-			    dataType: "xml",
-			    type: 'GET',
-			    success: function(res) {
-					var myXML = res.responseText;
-					var JSONConvertedXML = $.xml2json(myXML);
-					
-					$('#main').append('<caption>Курс ценных металлов НБУ : '+ JSONConvertedXML.item[0].date +
-					'</caption><tr><th>К-во</th><th>Валюта</th><th>Курс</th><th>Разница</th><th>Код валюты</th></tr>');
-					for(var i = JSONConvertedXML.item.length - 1; i >= 0; i--){
-						$('#main').append('<tr><td>'+JSONConvertedXML.item[i].size+'</td><td>'+JSONConvertedXML.item[i].name+
-						'</td><td>'+JSONConvertedXML.item[i].rate+'</td><td>'+JSONConvertedXML.item[i].change+'</td><td>'+
-						JSONConvertedXML.item[i].char3 + '</td></tr>');
-					}
-					$.mobile.hidePageLoadingMsg();
-			    }
-			});
-		}
-		
-		$( document ).delegate("#home", "pageshow", function() {
-			$.mobile.showPageLoadingMsg();
-		  	xmlLoader();
-		});
-	</script>
-</head> 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>xml PB.UA</title>
+    <meta name="description" content="PrivateBank">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="css/style.css" type="text/css" rel="stylesheet">
+    <script type="text/javascript" src="js/main.js"></script>
+</head>
 
 <body>
-	<div data-role="page" id="home" align="center"> 
-		<table id="main" class="simple-little-table"></table>
-	</div>
+    <div>
+        <h1>Exchange Rates</h1>
+        <table id="myTable" class="main">
+            <thead>
+                <tr>
+                    <th>Currency</th>
+                    <th>Purchase</th>
+                    <th>Selling</th>
+                    
+                </tr>
+            </thead>
+            <tbody class="tb">
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
 </body>
 </html>
